--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       background-size:cover;
       background-repeat: no-repeat;
       background-position: center;
-      background: url("nurse.jpg") no-repeat center center/cover;
+      background: url("https://raw.githubusercontent.com/leonardo-JohnAndrew/leonardo-johnandrew.github.io/main/Nurse.jpg")no-repeat center center/cover;
       background-attachment: fixed;
       -webkit-background-clip:text;
       background-clip: text;
@@ -22,8 +22,20 @@
       -webkit-text-fill-color:transparent;
       color:rgba(255, 255, 255, 0.5);
     }
+    body {
+     width: 1024px;
+      margin: 0 auto;
+    }
+   @media (max-width: 1024px) {
+  body {
+    zoom: 0.7; 
+       }
+}
+    
+    
   </style>
 </head>
+<meta name="viewport" content="width=1024">
 <body>
   <div id = "content">
     <p></p>
